--- a/FSLAVLearningDemo/FSLAVLearningDemo/Main.storyboard
+++ b/FSLAVLearningDemo/FSLAVLearningDemo/Main.storyboard
@@ -23,6 +23,9 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="9tD-O2-AJj"/>
+                    <connections>
+                        <segue destination="NB9-7B-Tbf" kind="show" id="sd9-PT-ffW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -43,6 +46,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XU3-D8-gTP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-325" y="-48"/>
+        </scene>
+        <!--FSLAVAudioMixViewController-->
+        <scene sceneID="kkX-9R-hHZ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FSLAVAudioMixViewController" id="NB9-7B-Tbf" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wCH-Sr-0UT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1131" y="-257"/>
         </scene>
     </scenes>
 </document>
