--- a/FSLAVLearningDemo/FSLAVLearningDemo/Classe/Controller/FSLAVAudioMixViewController.storyboard
+++ b/FSLAVLearningDemo/FSLAVLearningDemo/Classe/Controller/FSLAVAudioMixViewController.storyboard
@@ -12,7 +12,7 @@
         <!--多音轨混合-->
         <scene sceneID="SCE-Ea-uPB">
             <objects>
-                <viewController storyboardIdentifier="FSLAVAudioMixViewController" title="多音轨混合" id="Nzn-Uh-G09" customClass="FSLAVAudioMixViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FSLAVAudioMixViewController" title="多音轨混合" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Nzn-Uh-G09" customClass="FSLAVAudioMixViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tZd-8w-dXp"/>
                         <viewControllerLayoutGuide type="bottom" id="sDk-68-fKz"/>
@@ -21,8 +21,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="ona-ya-2AX">
-                                <rect key="frame" x="48" y="298" width="224" height="262"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ona-ya-2AX">
+                                <rect key="frame" x="48" y="348" width="224" height="190"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gyD-6w-LmM">
                                         <rect key="frame" x="0.0" y="0.0" width="224" height="40"/>
@@ -43,7 +43,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rvS-LC-uEL">
-                                        <rect key="frame" x="0.0" y="74" width="224" height="40"/>
+                                        <rect key="frame" x="0.0" y="50" width="224" height="40"/>
                                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="UW8-R6-aLK"/>
@@ -61,7 +61,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVZ-ZP-GDG">
-                                        <rect key="frame" x="0.0" y="148" width="224" height="40"/>
+                                        <rect key="frame" x="0.0" y="100" width="224" height="40"/>
                                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="x9A-3s-fA0"/>
@@ -79,7 +79,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHh-FK-7Mj">
-                                        <rect key="frame" x="0.0" y="222" width="224" height="40"/>
+                                        <rect key="frame" x="0.0" y="150" width="224" height="40"/>
                                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="p9g-fC-uJG"/>
@@ -105,13 +105,13 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请分别调节以下音乐音量大小，调节完毕后，点击「开始音频混合」即可生成一段新的混合音乐。记得要打开系统音量呦~" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8RF-dd-kr1">
-                                <rect key="frame" x="16" y="25.5" width="288" height="50.5"/>
+                                <rect key="frame" x="16" y="107.5" width="288" height="50.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="opu-AC-tsL">
-                                <rect key="frame" x="16" y="122" width="288" height="130"/>
+                                <rect key="frame" x="16" y="188" width="288" height="130"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Xhe-4O-Hab">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="30"/>
@@ -205,15 +205,13 @@
                         <constraints>
                             <constraint firstItem="opu-AC-tsL" firstAttribute="leading" secondItem="Geo-fr-wQb" secondAttribute="leadingMargin" id="0KJ-s6-Pdo"/>
                             <constraint firstAttribute="trailing" secondItem="ona-ya-2AX" secondAttribute="trailing" constant="48" id="A1e-Ye-c3O"/>
-                            <constraint firstItem="opu-AC-tsL" firstAttribute="top" secondItem="8RF-dd-kr1" secondAttribute="bottom" constant="46" id="D8S-0U-uTJ"/>
+                            <constraint firstItem="opu-AC-tsL" firstAttribute="top" secondItem="8RF-dd-kr1" secondAttribute="bottom" constant="30" id="D8S-0U-uTJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8RF-dd-kr1" secondAttribute="trailing" id="PG7-1X-2MD"/>
                             <constraint firstItem="8RF-dd-kr1" firstAttribute="leading" secondItem="Geo-fr-wQb" secondAttribute="leadingMargin" id="dec-Eh-b3X"/>
                             <constraint firstAttribute="trailingMargin" secondItem="opu-AC-tsL" secondAttribute="trailing" id="dh9-bo-msn"/>
-                            <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="ona-ya-2AX" secondAttribute="bottom" constant="8" id="due-ri-qb1"/>
-                            <constraint firstItem="8RF-dd-kr1" firstAttribute="top" secondItem="tZd-8w-dXp" secondAttribute="bottom" priority="500" constant="64" id="g3x-hO-b9x"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="ona-ya-2AX" secondAttribute="bottom" constant="30" id="due-ri-qb1"/>
                             <constraint firstItem="ona-ya-2AX" firstAttribute="leading" secondItem="Geo-fr-wQb" secondAttribute="leading" constant="48" id="lTI-5U-OrN"/>
-                            <constraint firstItem="8RF-dd-kr1" firstAttribute="top" secondItem="tZd-8w-dXp" secondAttribute="bottom" priority="250" constant="10" id="lna-Tq-hDi"/>
-                            <constraint firstItem="ona-ya-2AX" firstAttribute="top" secondItem="opu-AC-tsL" secondAttribute="bottom" constant="46" id="pqX-dr-dyx"/>
+                            <constraint firstItem="ona-ya-2AX" firstAttribute="top" secondItem="opu-AC-tsL" secondAttribute="bottom" constant="30" id="pqX-dr-dyx"/>
                         </constraints>
                     </view>
                     <connections>
