将组件改成最低支持8.0系统；完成音视频合成器功能、展示例子实现。

--- a/FSLAVLearningDemo/FSLAVLearningDemo/Classe/Controller/FSLAVAudioPitchRecordViewController.storyboard
+++ b/FSLAVLearningDemo/FSLAVLearningDemo/Classe/Controller/FSLAVAudioPitchRecordViewController.storyboard
@@ -21,8 +21,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Ttv-Nw-WZq">
-                                <rect key="frame" x="48" y="267" width="224" height="291"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ttv-Nw-WZq">
+                                <rect key="frame" x="48" y="302" width="224" height="256"/>
                                 <subviews>
                                     <view tag="100" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4A8-LP-pVU" customClass="speedSegmentButton">
                                         <rect key="frame" x="0.0" y="0.0" width="224" height="28"/>
@@ -35,7 +35,7 @@
                                         </connections>
                                     </view>
                                     <view tag="200" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QMZ-fl-I2m" customClass="PitchSegmentButton">
-                                        <rect key="frame" x="0.0" y="43" width="224" height="28"/>
+                                        <rect key="frame" x="0.0" y="36" width="224" height="28"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="28" id="5nK-gB-vhh"/>
@@ -45,7 +45,7 @@
                                         </connections>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SpX-PN-4OG">
-                                        <rect key="frame" x="0.0" y="86" width="224" height="40"/>
+                                        <rect key="frame" x="0.0" y="72" width="224" height="40"/>
                                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="6t7-sM-F47"/>
@@ -62,26 +62,8 @@
                                             <action selector="startRecordingAudio" destination="qQ5-nw-aFH" eventType="touchUpInside" id="HVx-DP-Bw1"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cX4-0c-BPM">
-                                        <rect key="frame" x="0.0" y="141" width="224" height="40"/>
-                                        <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="mDo-Fu-gLh"/>
-                                        </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="暂停录音"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="4"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                        </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <action selector="pauseRecordingAudio" destination="qQ5-nw-aFH" eventType="touchUpInside" id="8rt-0R-MHd"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgP-fE-jLd">
-                                        <rect key="frame" x="0.0" y="196" width="224" height="40"/>
+                                        <rect key="frame" x="0.0" y="120" width="224" height="40"/>
                                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="ev8-HK-Hby"/>
@@ -98,8 +80,26 @@
                                             <action selector="finishRecordingAudio" destination="qQ5-nw-aFH" eventType="touchUpInside" id="obI-66-VNN"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cX4-0c-BPM">
+                                        <rect key="frame" x="0.0" y="168" width="224" height="40"/>
+                                        <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="mDo-Fu-gLh"/>
+                                        </constraints>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" title="重新录音"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="reRecordingAudio" destination="qQ5-nw-aFH" eventType="touchUpInside" id="SmJ-mF-FmP"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q4G-SD-2Mn">
-                                        <rect key="frame" x="0.0" y="251" width="224" height="40"/>
+                                        <rect key="frame" x="0.0" y="216" width="224" height="40"/>
                                         <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="yHZ-Jh-oIX"/>
@@ -119,13 +119,13 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请点击「开始录音」按钮开始录制音频，录制完成后点击「结束并播放录音」生成并播放音频文件。" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="etc-Nz-AzX">
-                                <rect key="frame" x="16" y="100" width="288" height="50.5"/>
+                                <rect key="frame" x="16" y="184" width="288" height="50.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="list_ic_tape" translatesAutoresizingMaskIntoConstraints="NO" id="iY0-Xk-ZEj">
-                                <rect key="frame" x="152" y="64" width="16" height="16"/>
+                                <rect key="frame" x="110" y="64" width="100" height="100"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -141,16 +141,17 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="pauseAudioRecordBtn" destination="cX4-0c-BPM" id="S4f-Qd-D82"/>
                         <outlet property="pitchBar" destination="QMZ-fl-I2m" id="MVf-0x-JPP"/>
-                        <outlet property="playAudioRecordBtn" destination="q4G-SD-2Mn" id="VZO-Jg-9wP"/>
+                        <outlet property="playAudioRecordBtn" destination="q4G-SD-2Mn" id="n6J-sl-1Bd"/>
+                        <outlet property="reRecordingAudioBtn" destination="cX4-0c-BPM" id="dve-Lm-j3s"/>
                         <outlet property="speedBar" destination="4A8-LP-pVU" id="UYe-1d-0ye"/>
-                        <outlet property="stopAudioRecordBtn" destination="sgP-fE-jLd" id="xPf-au-1fU"/>
+                        <outlet property="startAudioRecordBtn" destination="SpX-PN-4OG" id="GSZ-d0-Gf5"/>
+                        <outlet property="stopAudioRecordBtn" destination="sgP-fE-jLd" id="vyj-vH-xPC"/>
                         <outlet property="usageLabel" destination="etc-Nz-AzX" id="dtl-w8-eQo"/>
-                        <outletCollection property="actionButtons" destination="SpX-PN-4OG" id="Hoi-K7-yHI"/>
-                        <outletCollection property="actionButtons" destination="cX4-0c-BPM" id="aVd-fN-nJb"/>
-                        <outletCollection property="actionButtons" destination="sgP-fE-jLd" id="0zy-Jm-ZMj"/>
-                        <outletCollection property="actionButtons" destination="q4G-SD-2Mn" id="kra-LY-GKu"/>
+                        <outletCollection property="actionButtons" destination="SpX-PN-4OG" id="0jy-tQ-wi0"/>
+                        <outletCollection property="actionButtons" destination="sgP-fE-jLd" id="fMX-7s-fcF"/>
+                        <outletCollection property="actionButtons" destination="cX4-0c-BPM" id="4PE-Yl-ksO"/>
+                        <outletCollection property="actionButtons" destination="q4G-SD-2Mn" id="R3S-os-yGv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IfN-pK-zAB" userLabel="First Responder" sceneMemberID="firstResponder"/>
