--- a/FSLAVLearningDemo/FSLAVLearningDemo/Classe/Controller/FSLAVVideoMixViewController.storyboard
+++ b/FSLAVLearningDemo/FSLAVLearningDemo/Classe/Controller/FSLAVVideoMixViewController.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="IkY-cH-cye">
-                                <rect key="frame" x="16" y="248" width="288" height="130"/>
+                                <rect key="frame" x="16" y="292" width="288" height="130"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="w5R-rj-hht">
                                         <rect key="frame" x="0.0" y="0.0" width="288" height="30"/>
@@ -130,7 +130,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oBi-Qz-8NQ" customClass="PlayerView">
-                                <rect key="frame" x="0.0" y="20" width="320" height="180"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="180"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="oBi-Qz-8NQ" secondAttribute="height" multiplier="16:9" id="Nwu-x6-cpc"/>
@@ -139,7 +139,7 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="oBi-Qz-8NQ" firstAttribute="top" secondItem="Hi4-sQ-9B0" secondAttribute="topMargin" id="2nE-Xd-znw"/>
+                            <constraint firstItem="oBi-Qz-8NQ" firstAttribute="top" secondItem="Hi4-sQ-9B0" secondAttribute="topMargin" constant="44" id="2nE-Xd-znw"/>
                             <constraint firstAttribute="trailing" secondItem="oBi-Qz-8NQ" secondAttribute="trailing" id="6fy-eS-BPI"/>
                             <constraint firstItem="oBi-Qz-8NQ" firstAttribute="leading" secondItem="Hi4-sQ-9B0" secondAttribute="leading" id="JtF-xn-K4Y"/>
                             <constraint firstItem="0DB-st-4M5" firstAttribute="top" secondItem="wqp-3i-JVl" secondAttribute="bottom" constant="48" id="UYQ-gB-E83"/>
